--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -355,7 +355,7 @@
                 <p>
                     Bu site, size daha iyi ve daha ilgili bir tarama deneyimi
                     sunmak için çerezler kullanır.
-                    <a href="#">Daha fazla bilgi...</a>
+                    <a href="privacy-policy.html">Daha fazla bilgi...</a>
                 </p>
             </div>
 
